deploy-kubernetes-loadbalancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-flask-app-service
spec:
  type: NodePort
  selector:
    app: basic-flask-app
    version: 1.0.0
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
